# Retro-Rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE  THIRD_PARTY_LICENSES.md  build.rs  readme.md
c_wrapper/: rust_retro_emulator.cpp  rust_retro_emulator.h  rust_retro_gamedata.cpp  rust_retro_gamedata.h  rust_retro_movie.cpp  rust_retro_movie.h
cores/: atari.json  gb.json  genesis.json  nes.json  pce.json  snes.json
includes/: zip.h
src/: env.rs  learn_timer.rs  lib.rs  q_learning.rs
src/env/: controller.rs  emulator.rs  frame_stack.rs  gamedata.rs  gamestate.rs  movie.rs
src/environments/: image_retro_env.rs  mod.rs  movie_retro_env.rs
src/environments/image_retro_env/: emulator.rs  gamestate.rs  platform.rs
src/environments/movie_retro_env/: movie.rs
src/q_learning/: model.rs  model_config.rs  network.rs  network_config.rs  policy.rs  replay_buffer.rs  utils.rs
src/traits/: mod.rs  retro_env.rs
